--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #2b2b2b;
   border-radius: 25px;
 }
 
@@ -24,5 +24,9 @@ li a:hover:not(.active) {
 }
 
 .active {
-    background-color: #04AA6D;
+    background-color: blue;
+}
+
+body {
+    background-color: #242424;
 }
