--- a/styles/image-carousel.css
+++ b/styles/image-carousel.css
@@ -30,6 +30,7 @@
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    z-index: 1;
 }
 
 /* Position the "next button" to the right */
@@ -38,11 +39,44 @@
     border-radius: 3px 0 0 3px;
 }
 
-.slideshow-container button {
+.carousel-text-container {
+    position: absolute;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    color: white;
+    width: 100%;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+#we-are {
+    font-weight: 400;
+    -webkit-text-stroke: 1px black;
+    font-size: 2em;
+}
+
+#bournemouth-lifeguard-corps {
+    font-weight: 900;
+    -webkit-text-stroke: 1px black;
+    font-size: 4em;
+}
+
+#carousel-text {
+    font-weight: 400;
+    -webkit-text-stroke: 1px black;
+    font-size: 2em;
+}
+
+.carousel-container button {
     background-color: #EF877E;
     padding: 15px;
     border-radius: 25px;
+    margin-top: 16px;
+    font-weight: 900;
+    border: 0px;
 }
+
 /* Fading animation */
 .fade {
     animation-name: fade;
@@ -58,4 +92,9 @@
     to {
         opacity: 1
     }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+    .prev, .next {font-size: 11px}
 }
