--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -19,6 +19,8 @@
     margin-left: 8px;
     text-align: center;
     text-decoration: none;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
 }
 
 /* Elements which float on the right */
@@ -59,13 +61,13 @@
 #cta-donate {
     background-color: #EF877E;
     border-radius: 25px;
-    padding: 8px 8px;
+    padding: 8px 16px;
     margin-top: 8px;
 }
 
 /* For screens where the nav bar squishes onto multiple lines */
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
 
     /* Show the burger menu icon */
     #hamburger-menu {
