--- a/styles/image-carousel.css
+++ b/styles/image-carousel.css
@@ -53,6 +53,7 @@
     font-weight: 900;
     border: 0px;
     cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 /* Fading animation */
