--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -71,6 +71,7 @@
     border-radius: 25px;
     padding: 8px 16px;
     margin-top: 8px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 /* For screens where the nav bar squishes onto multiple lines */
