--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -98,3 +98,8 @@
         display: none;
     }
 }
+@media screen and (max-width: 300px) {
+    #members-page-icon {
+        display: none;
+    }
+}
