--- a/styles/image-carousel.css
+++ b/styles/image-carousel.css
@@ -62,6 +62,19 @@
     animation-duration: 1.5s;
 }
 
+@media screen and (max-width: 500px) {
+    #bournemouth-lifeguard-corps {
+        font-size: 3em;
+    }
+    #carousel-text, #we-are {
+        font-size: 1.5em;
+    }
+}
+@media screen and (max-width: 350px) {
+    #bournemouth-lifeguard-corps {
+        font-size: 2em;
+    }
+}
 
 @keyframes fade {
     from {
