--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,3 +1,67 @@
 .footer-container {
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    background-color: #FAF9F6;
+    margin-top: 16px;
+}
+
+.footer-container a {
+    text-decoration: none;
+    color: black;
+}
+
+.footer-col-1 {
+    width: 30%;
+    padding: 8px;
+}
+
+.footer-col-1 p {
+    margin: 0;
+    padding: 8px;
+}
+
+.footer-col-2 {
+    width: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    padding: 16px;
+}
+
+.footer-col-3 {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+}
+
+.logo-and-text-container {
+    display: flex;
+}
+
+#logo-footer {
+    padding: 8px;
+}
+
+#logo-text-footer {
+    padding: 16px 8px;
+}
+
+.footer-col-3 {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+}
+
+.footer-col-3 ul{
+    padding-left: 20px;
+}
+
+.footer-head {
+    font-weight: 900;
 }
