--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -78,7 +78,7 @@ textarea {
 
 @media screen and (max-width: 900px) {
     .contact-form {
-        display: grid;
+        display: block;
     }
     .contact-form img {
         display: none;
