--- a/styles/about-us/our-history.css
+++ b/styles/about-us/our-history.css
@@ -89,3 +89,9 @@
         display: none;
     }
 }
+
+@media screen and (max-width: 700px) {
+    .page-heading h1 {
+        margin-top: -10%;
+    }
+}
