--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -7,6 +7,8 @@
 .notification-bar p {
     margin: 0;
     padding: 8px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
 }
 .notification-bar a {
     color: black;
