--- a/styles/about-us/our-history.css
+++ b/styles/about-us/our-history.css
@@ -2,25 +2,30 @@
     text-align: center;
 }
 
-.page-heading img {
+#page-head-image {
     width: 90%;
     height: 300px;
     object-fit: cover;
     border-radius: 25px;
-    z-index: 0;
+    padding: 0;
 }
 
 .page-heading h1 {
-    position:relative;
+    position: absolute;
     background-color: #FAF9F6;
     padding: 16px;
-    width: 25%;
     border-radius: 25px;
     margin-left: 7%;
-    margin-top: -4%;
+    margin-right: 7%;
+    margin-top: -50px;
+    margin-bottom: 66px;
     font-family: 'Lato', sans-serif;
     font-weight: 900;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.page-content {
+    margin-top: 32px;
 }
 
 .page-content p {
@@ -29,23 +34,31 @@
     font-weight: 400;
 }
 
-.page-content h1 {
+#timeline-header {
     font-family: 'Lato', sans-serif;
     font-weight: 900;
-    margin-top: 8px;
+    margin-top: 24px;
     margin-bottom: 24px;
+    width: 100%;
+    text-align: center;
 }
 
 .page-content img {
-    width: 40%;
+    width: 47.5%;
     height: 200px;
     object-fit: cover;
     border-radius: 25px;
-    margin: 8px;
 }
 
 .image-container {
-    text-align: center;
+    margin: 0% 7%;
+    position: relative;
+    display: inline-block;
+    width: 86%;
+}
+
+#club-hut-new {
+    float: right;
 }
 
 .collapsible {
@@ -59,6 +72,7 @@
     font-size: 1.125rem;
     border-radius: 25px;
     margin-bottom: 16px;
+    font-weight: 900;
 }
 
 .collapsible i{
@@ -78,20 +92,19 @@
 }
 
 @media screen and (max-width: 900px) {
-    .page-heading h1 {
-        width: 80%;
-        margin-left: 10%;
-    }
     .page-content img {
-        width: 90%;
+        width: 100%;
+        position: relative;
+        display: block;
     }
     #club-hut-old {
         display: none;
     }
-}
-
-@media screen and (max-width: 700px) {
     .page-heading h1 {
-        margin-top: -10%;
+        position: relative;
+        margin-bottom: 0;
+    }
+    .page-content {
+        margin-top: 16px;
     }
 }
