--- a/styles/image-carousel.css
+++ b/styles/image-carousel.css
@@ -1,22 +1,41 @@
-.carousel-item {
-    display: none;
-}
+/******************/
+/* IMAGE CAROUSEL */
+/******************/
 
-.carousel-container img {
-    object-fit: cover;
-    height: 92.5vh;
-    width: 100%;
-}
-
-/* Slideshow container */
-.carousel-container {
+/* Carousel Container */
+#home-image-carousel-container {
     max-width: 100vw;
     max-height: 100vh;
     position: relative;
     margin: auto;
 }
 
-.carousel-text-container {
+/* Each individual carousel slide */
+.home-image-carousel-item {
+    display: none;
+}
+
+/* IMAGE CAROUSEL IMAGE */
+/************************/
+
+/* Each individual carousel image */
+.home-image-carousel-item-img {
+    object-fit: cover;
+    height: 92.5vh;
+    width: 100%;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+/* IMAGE CAROUSEL TEXT */
+/***********************/
+
+/* Each individual fontainer of text for each carousel slide */
+.home-image-carousel-text-container {
     position: absolute;
     text-align: center;
     font-family: 'Lato', sans-serif;
@@ -27,25 +46,29 @@
     transform: translateY(-50%);
 }
 
-#we-are {
+/* Carsousel WE ARE text */
+#image-carousel-we-are-text {
     font-weight: 400;
     -webkit-text-stroke: 1px black;
     font-size: 2em;
 }
 
-#bournemouth-lifeguard-corps {
+/* Carsousel BOURNEMOUTH LIFEGUARDS text */
+#image-carousel-bournemouth-lifeguard-corps-text {
     font-weight: 900;
     -webkit-text-stroke: 1px black;
     font-size: 4em;
 }
 
-#carousel-text {
+/* Carsousel CAROUSEL text (the text varies with each slide dependent on the image) */
+#image-carousel-carousel-text {
     font-weight: 400;
     -webkit-text-stroke: 1px black;
     font-size: 2em;
 }
 
-.carousel-container a {
+/* Carsousel LEARN MORE button */
+#image-carousel-learn-more-button {
     background-color: #EF877E;
     display: inline-block;
     padding: 16px;
@@ -54,30 +77,47 @@
     margin-top: 8px;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    color: black;
-    text-decoration: none;
     font-weight: 900;
 }
 
-/* Fading animation */
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
+/* Carsousel LEARN MORE button physical link */
+#image-carousel-learn-more-button-link {
+    color: black;
+    text-decoration: none;
 }
 
+/*****************/
+/* MEDIA QUERIES */
+/*****************/
+
+/* For screens where the text is too big */
 @media screen and (max-width: 500px) {
-    #bournemouth-lifeguard-corps {
+
+    /* Makes the primary text smaller */
+    #image-carousel-bournemouth-lifeguard-corps-text {
         font-size: 3em;
     }
-    #carousel-text, #we-are {
+
+    /* Makes the secondary text smaller */
+    #image-carousel-carousel-text, #image-carousel-we-are-text {
         font-size: 1.5em;
     }
+
 }
+
+/* For screens where the text is too big */
 @media screen and (max-width: 350px) {
-    #bournemouth-lifeguard-corps {
+
+    /* Makes the primary text smaller */
+    #image-carousel-bournemouth-lifeguard-corps-text {
         font-size: 2em;
     }
+
 }
+
+/**************/
+/* ANIMATIONS */
+/**************/
 
 @keyframes fade {
     from {
