--- a/styles/article-heading.css
+++ b/styles/article-heading.css
@@ -23,3 +23,12 @@
     font-weight: 900;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
+@media screen and (max-width: 900px) {
+
+    #general-page-heading-heading {
+        position: relative;
+        margin-bottom: 0;
+    }
+    
+}
